kafka/kafka-ui-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-ui
  labels:
    app: kafka-ui
  namespace: kafka
spec:
  replicas: 1  # Você pode ajustar o número de réplicas conforme necessário
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080  # Kafka UI geralmente roda na porta 8080, ajuste se necessário
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
---
kind: Service
apiVersion: v1
metadata:
  name: kafka-ui-service
  labels:
    app: kafka-ui
  namespace: kafka
spec:
  type: ClusterIP  # Pode ser alterado para LoadBalancer ou NodePort conforme necessário
  selector:
    app: kafka-ui
  ports:
    - protocol: TCP
      port: 80  # Porta que o serviço vai expor internamente
      targetPort: 8080  # Porta em que o Kafka UI está rodando dentro do container
